[package]
name = "wallpaper-dl"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
description = "Web scraper for downloading wallpapers from various sites"
repository = "https://github.com/Stridsvagn69420/wallpaper-dl.git"
homepage = "https://github.com/Stridsvagn69420/wallpaper-dl"
keywords = ["wallpaper", "downloader"]
categories = ["command-line-utilities", "web-programming::http-client"]
publish = false # temporary safeguard 

[dependencies]
apputils = "0.1"
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["tokio-rustls", "rustls-tls-native-roots", "deflate", "gzip", "brotli"], default-features = false }
toml = "0.8"
serde = "1"
url = "2.5"

[profile.release]
strip = true
lto = true