[package]
name = "wallpaper-dl"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
readme = "README.md"
description = "Wallpaper downloader for various websites"
repository = "https://github.com/Stridsvagn69420/wallpaper-dl.git"
homepage = "https://github.com/Stridsvagn69420/wallpaper-dl"
keywords = ["wallpaper", "downloader"]
categories = ["command-line-utilities", "web-programming::http-client"]
authors = ["Stridsvagn69420"]
publish = true 

[dependencies]
apputils = "0.1"
url = "2.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls-native-roots", "deflate", "gzip", "brotli", "json", "charset", "multipart"], default-features = false }
scraper = "0.19"
blake3 = { version = "1.5", features = ["serde", "neon"] }
mailparse = "0.14"

[profile.release]
strip = true
lto = true
